# PySME

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  triage.yml
crates/pysme-build/: Cargo.toml
crates/pysme-cli/: Cargo.toml
crates/pysme-cli/src/: main.rs
crates/pysme-codegen/: Cargo.toml
crates/pysme-core/: Cargo.toml
crates/pysme-parser/: Cargo.toml
crates/pysme-runtime/: Cargo.toml
crates/pysme-server/: Cargo.toml
docs/: DEVELOPMENT.md  MAINTAINERS.md
examples/hello-world/: pysme.config.py
examples/hello-world/pages/: index.component.pysme
pysme/: __init__.py  config_loader.py  errors.py  test.py
pysme/api/: __init__.py  client.py  middleware.py
pysme/builder/: __init__.py  tailwind.py
pysme/frontend/: __init__.py  basecomp.py
pysme/utils/: filesync.py  io_helpers.py  logging.py  paths.py
scripts/: run_example.bat  run_tests.bat
