[package]
name = "pysme-build"
version.workspace = true
edition.workspace = true  
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Build system for PySme applications"

[dependencies]
pysme-core.workspace = true
pysme-parser.workspace = true
pysme-codegen.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true

walkdir = "2.4"
tempfile = "3.8"
sha2 = "0.10"

tokio-process = "0.2"
flate2 = "1.0"