[package]
name = "pysme-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for PySme framework"

[[bin]]
name = "PySME"
path = "src/main.rs"

[dependencies]
pysme-core.workspace = true
pysme-parser.workspace = true
pysme-codegen.workspace = true
pysme-server.workspace = true
pysme-build.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
clap_complete = "4.4"

console = "0.16"
indicatif = "0.18"
dialoguer = "0.11"
colored = "3.0"

atty = "0.2"