[package] 
name = "pysme-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation for PySme components"

[dependencies]
sqlx.workspace = true
pysme-core.workspace = true
pysme-parser.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

handlebars = "6.3"
indexmap = "2.0"