[package]
name = "pysme-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for PySme component files"

[dependencies]
pysme-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
sqlx.workspace = true

rustpython-parser = "0.4"
rustpython-ast = "0.4"

nom = "8.0"
tree-sitter = "0.25"

regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }