[package]
name = "pysme-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM runtime for PySme components"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pysme-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "Event",
    "EventTarget",
    "CustomEvent",
    "Node",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration",
    "History",
    "Location",
    "Storage",
    "WebSocket",
    "MessageEvent",
] }

getrandom = { version = "0.3.3" }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.wee_alloc]
version = "0.4"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]