[package]
name = "pysme-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Development server for PySme applications"

[dependencies]
pysme-core.workspace = true
pysme-build.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true

axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

notify = { version = "8.0", features = ["serde"] }
walkdir = "2.4"

tokio-tungstenite = "0.27"